--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
 <!DOCTYPE html>
 <html>
-<iframe title="cv_final" style=position:fixed;width:100%;height:100% src="https://app.powerbi.com/view?r=eyJrIjoiMmVkMjJiZjMtMDNhNS00OTFmLTlmNzMtNDIzYzk5M2ZkNDY0IiwidCI6ImIwMDI3NmM5LTJiNmYtNDVmYS1iYzYxLTA3YTAyY2JmNjQ2ZSJ9&pageName=ReportSection143888393033748e9ace" frameborder="0" allowFullScreen="true"></iframe></html>
+<head>
+    <title>CV Final</title>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4CHGDKY9DD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+</head>
+<body style="margin:0;">
+    <iframe 
+        title="cv_final" 
+        style="position:fixed;width:100%;height:100%;" 
+        src="https://app.powerbi.com/view?r=eyJrIjoiMmVkMjJiZjMtMDNhNS00OTFmLTlmNzMtNDIzYzk5M2ZkNDY0IiwidCI6ImIwMDI3NmM5LTJiNmYtNDVmYS1iYzYxLTA3YTAyY2JmNjQ2ZSJ9&pageName=ReportSection143888393033748e9ace" 
+        frameborder="0" 
+        allowFullScreen="true">
+    </iframe>
+</body>
+</html>
